Update issue templates

--- a/.github/ISSUE_TEMPLATE/------------.md
+++ b/.github/ISSUE_TEMPLATE/------------.md
@@ -1,13 +1,13 @@
 ---
 name: Я нашел баг!
 about: Опишите баг, чтобы мы его исправили!
-title: ''
+title: Заголовок [БАГ]
 labels: bug
 assignees: ''
 
 ---
 
-**Опишите баг**
+**Описание бага**
 Кратко и четко опишите баг: что вы видели, что происходило и так далее.
 
 **Воспроизведение бага**
@@ -24,7 +24,7 @@ assignees: ''
 Если есть возможность, добавьте скриншоты.
 
 **Файл specifications.yaml**
-Добавьте файл specifications.yaml в репорту. Если его нет, то попробуйте запустить, а затем выйти из игры. Если это не помогло, то напишите:
+Добавьте файл specifications.yaml. Если его нет, то попробуйте запустить, а затем выйти из игры. Если это не помогло, то напишите:
 1. Какую вы используете Операционную Систему.
 2. Характеристики вашего ПК/ноутбука: модель процессора, видеокарты, какой монитор и так далее.
 
